# python-2048-game

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
game/game/: game.py  gui.py  operations.py
